# Inspector

./: CMakeLists.txt  README.md  inspector  inspector.c
inspector.dSYM/Contents/Resources/DWARF/: inspector
